--- a/base/locale/om/LC_MESSAGES/django.po
+++ b/base/locale/om/LC_MESSAGES/django.po
@@ -1,93 +1,176 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Oromo translations for EthioPoultry
+# Copyright (C) 2024 EthioPoultry
+# This file is distributed under the same license as the EthioPoultry package.
+# Fraol <fraol@ethiopoultry.com>, 2024.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-08 20:46+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Project-Id-Version: EthioPoultry 1.0\n"
+"Report-Msgid-Bugs-To: support@ethiopoultry.com\n"
+"POT-Creation-Date: 2025-05-18 23:36+0300\n"
+"PO-Revision-Date: 2024-05-19 15:30+0300\n"
+"Last-Translator: Fraol <fraol@ethiopoultry.com>\n"
+"Language-Team: Oromo <om@ethiopoultry.com>\n"
+"Language: om\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#: .\base\templates\base\base.html:9
 msgid "EthioPoultry - Ethiopian Poultry Marketplace"
 msgstr "EthioPoultry - Gabaa Horsiisa Lukkuu Itoophiyaa"
 
+#: .\base\templates\base\base.html:19
+msgid "Skip to main content"
+msgstr "Gara ogummaa guddaa seenuu"
+
+#: .\base\templates\base\base.html:23 .\base\templates\base\base.html:30
 msgid "Home"
 msgstr "Mana"
 
+#: .\base\templates\base\base.html:24
+msgid "POULTRY"
+msgstr "HORSIISA LUKKUU"
+
+#: .\base\templates\base\base.html:27
+msgid "Main navigation"
+msgstr "Garaagarummaa guddaa"
+
+#: .\base\templates\base\base.html:33
 msgid "Marketplace"
 msgstr "Gabaa"
 
+#: .\base\templates\base\base.html:36
 msgid "Add Item"
 msgstr "Meeshaa dabaluu"
 
+#: .\base\templates\base\base.html:40
 msgid "Conversations"
 msgstr "Haasawaa"
 
+#: .\base\templates\base\base.html:42
+msgid "Unread messages:"
+msgstr "Ergaa hin dubbifne:"
+
+#: .\base\templates\base\base.html:46 .\base\templates\base\base.html:102
 msgid "Contact Us"
 msgstr "Nu qunnamaa"
 
+#: .\base\templates\base\base.html:49
 msgid "About"
 msgstr "Waa'ee keenya"
 
+#: .\base\templates\base\base.html:57
 msgid "Sell"
 msgstr "Gurguruu"
 
+#: .\base\templates\base\base.html:60
+msgid "User menu"
+msgstr "Menyuu fayyadamaa"
+
+#: .\base\templates\base\base.html:68
 msgid "My Profile"
 msgstr "Piroofaayila koo"
 
+#: .\base\templates\base\base.html:70
 msgid "Edit Profile"
 msgstr "Piroofaayila gulaalu"
 
+#: .\base\templates\base\base.html:71
 msgid "Logout"
 msgstr "Baʼuu"
 
+#: .\base\templates\base\base.html:75
 msgid "Register"
 msgstr "Galmaaʼuu"
 
+#: .\base\templates\base\base.html:76
 msgid "Login"
 msgstr "Seenuu"
 
-msgid "Empowering Ethiopian <br> poultry farmers."
-msgstr "Horsiistota lukkuu Itoophiyaa <br> cimsuuf"
+#: .\base\templates\base\base.html:78
+msgid "Toggle navigation"
+msgstr "Garaagarummaa jijjiiraa"
 
-msgid "Quick Links"
-msgstr "Liinkii ariitii"
+#: .\base\templates\base\base.html:103
+msgid "Designed by"
+msgstr "Akkaataa ittiin ijaarame"
 
-msgid "Buy Items"
-msgstr "Meeshaalee bituu"
+#: .\base\templates\base\index.html:37
+msgid "Empowering Ethiopia's Poultry Farmers with Fairness & Growth"
+msgstr "Horsiistota Lukkuu Itoophiyaa Cimsuu fi Guddina Waliin"
 
-msgid "Contact"
-msgstr "Walqunnamtii"
-
-msgid "Follow Us"
-msgstr "Nu hordofaa"
-
-msgid "Telegram"
-msgstr "Teelagraamii"
-
-msgid "Group"
-msgstr "Garee"
-
-msgid "Fraol"
-msgstr "Fira'ol"
-
-msgid "EthioPoultry. All rights reserved."
-msgstr "EthioPoultry. Mirgi hundi eebbifameera."
-
-msgid "Welcome to EthioPoultry"
-msgstr "Baga nagaan EthioPoultry dhufte"
-
+#: .\base\templates\base\index.html:38
 msgid "Connecting Ethiopian poultry farmers with buyers nationwide"
 msgstr "Horsiistota lukkuu Itoophiyaa daldaltoota biyya guutuu waliin walqunnamsiisuu"
 
+#: .\base\templates\base\index.html:39
 msgid "Browse Marketplace"
 msgstr "Gabaa daawwadhu"
+
+#: .\base\templates\base\index.html:44
+msgid "Our Impact So Far"
+msgstr "Dhiibbaa Keenya Ammaatti"
+
+#: .\base\templates\base\index.html:49
+msgid "Total Users"
+msgstr "Fayyadamtoota Waliigalaa"
+
+#: .\base\templates\base\index.html:53
+msgid "Active Users"
+msgstr "Fayyadamtoota Hojii Irraa Jiru"
+
+#: .\base\templates\base\index.html:57
+msgid "Items for Sale"
+msgstr "Wantoota Gurgurtaa"
+
+#: .\base\templates\base\index.html:61
+msgid "Conversations Started"
+msgstr "Haasawaawan Jalqabame"
+
+#: .\base\templates\base\index.html:65
+msgid ""
+"Join a growing community of Ethiopian poultry farmers, buyers, and experts. "
+"List your products, connect with partners, and start meaningful "
+"conversations today!"
+msgstr "Jiraattota horsiistota lukkuu Itoophiyaa, daldaltoota, fi ogartootaa wajjin walitti makamtuu keessatti makamuuf. Oomisha keessan galmeessaa, hirmaattoota wajjin walqunnamtii godhaa, haasawa barbaachisaa qaban har'a jalqabaa!"
+
+#: .\base\templates\base\index.html:71
+msgid "Why We Built This Platform?"
+msgstr "Maaliif Platforma Kun Ijaarree?"
+
+#: .\base\templates\base\index.html:72
+msgid "Stop Price Shocks, Grow with Confidence"
+msgstr "Dhibee Gatii Dhabamsiisaa, Amansiin Waliin Guddadhaa"
+
+#: .\base\templates\base\index.html:73
+#, python-format
+msgid ""
+"Did you know? 40%% of small poultry farmers lose profits due to "
+"unpredictable price swings. We're changing that."
+msgstr "Beektaa? 40%% horsiistota lukkuu xiqqaa galii isaanii gatii hin beekkamin irraa dhabu. Kun nuu jijjiirama."
+
+#: .\base\templates\base\index.html:74
+msgid "→ Real-time pricing + expert tips = steadier income for YOU."
+msgstr "→ Gatii yeroo dhugaa + gorsa ogartootaa = galii tasgabbaa SIIF."
+
+#: .\base\templates\base\index.html:79
+msgid "Connect Directly—No More Middlemen!"
+msgstr "Gara Fuula Duraa—Dabalataan Hin Jiru!"
+
+#: .\base\templates\base\index.html:80
+#, python-format
+msgid ""
+"Over 70%% of farmers struggle to find fair buyers. We link you directly to "
+"trusted traders, suppliers, and experts—cutting costs, boosting profits."
+msgstr "70%% ol horsiistota daldaltoota sirrii argachuuf rakkisuu. Si daldaltoota amanamoo, oomishaa, fi ogartootaa wajjin walqunnamsiifna—kostii hir'isuu, galii dabarsuu."
+
+#: .\base\templates\base\index.html:85
+msgid "Transparent Markets = Stronger Farmers"
+msgstr "Gabaabummaa Gabaa = Horsiistota Cimaa"
+
+#: .\base\templates\base\index.html:86
+msgid ""
+"Rumors of 'shortages' hurt small farms. Truth: Ethiopia produces 300M+ eggs/"
+"year—enough for all! We expose manipulation and highlight REAL data."
+msgstr "Odeeffannoon 'hanga' horsiistota xiqqaa miidhuu. Dhugaa: Itoophiyaan bifi 300M+ eggs/year—hundaaf gahaa! Sochii jijjiiramaa agarsiifnaa fi daataa DHUGAA guddisna."
